container-bootcamp/section-12-labs/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lab-nginx-service
  namespace: training-lab
spec:
  selector:
    app: lab-nginx
  ports:
    - protocol: TCP
      port: 80
